# gs2-cpp-sdk-ranking-private

./: CMakeLists.txt
src/gs2/ranking/: Gs2RankingPrivate.hpp  Gs2RankingPrivateClient.hpp
src/gs2/ranking/control/: CalcImmediateRequest.hpp
